gitops/apps/rhcl-demo/base/resources/31-httproute-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhcl-ui
  namespace: demo
  labels:
    app: rhcl-ui
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
  rules:
    - matches:
        - method: GET
          path:
            type: Exact
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: rhcl-ui
          port: 80
          weight: 1
